add icons and labels

--- a/htdocs/templates/directory.html
+++ b/htdocs/templates/directory.html
@@ -1,9 +1,9 @@
 <article>
-<h1><i data-entry-icon="'directory'"></i> {{path}}</h1>
+<h1><i data-entry-icon="'directory'"></i> {{path}} <small>Directory</small></h1>
 <ul style="list-style-type: none">
 <li data-ng-repeat="entry in object.entries">
-<a href="/#/{{$parent.path}}/{{entry.basename}}"><i data-entry-icon="entry.type"></i> {{entry.basename}}</a>
+<i data-entry-icon="entry.type"></i> 
+<a href="/#/{{$parent.path}}/{{entry.basename}}">{{entry.basename}}</a>
 </li>
 </ul>
-
 </article>
