--- a/htdocs/templates/object.html
+++ b/htdocs/templates/object.html
@@ -2,7 +2,12 @@
 <h1 style="font-size:1.8em;"><i data-entry-icon="'object'"></i> {{path}} <small>Object</small></h1>
 
 <table class="table">
-<tr><th>type</th><td>{{object.type}}</td></tr>
+
+<tbody>
+<tr><th>type</th><td>
+<i data-entry-icon="object.type"></i> {{object.type}}
+</td>
+</tr>
 <tr><th>sha1</th><td>{{object.sha1}}</td></tr>
 <tr><th>size</th><td>{{object.size}}</td></tr>
 
