--- a/htdocs/templates/objects.html
+++ b/htdocs/templates/objects.html
@@ -1,4 +1,4 @@
-<h1><i class="icon-folder-open"></i> {{path}}</h1>
+<h1><i class="icon-folder-open"></i> {{path}} <small>Directory</small></h1>
 
 <table class="table table-bordered table-hover">
 <tbody>
