--- a/htdocs/templates/object.html
+++ b/htdocs/templates/object.html
@@ -19,7 +19,34 @@
 <span data-ng-switch-default>{{prop.value}}</span>
 </td>
 </tr>
-<tr><th>message</th><td>{{object.message}}</td></tr>
+</tbody>
+
+<tbody data-ng-switch="object.type">
+<tr data-ng-switch-when="commit"><th>message</th><td>{{object.message}}</td></tr>
+<tr data-ng-switch-when="tag"><th>message</th><td>{{object.message}}</td></tr>
+<tr data-ng-switch-when="tree"><th>entries</th><td>
+
+<table class="table table-striped">
+<thead>
+<tr>
+<th>mode</th>
+<th>filename</th>
+<th>sha1</th>
+</tr>
+</thead>
+<tbody>
+<tr data-ng-repeat="entry in object.entries">
+<td><i data-mode-icon="entry.mode"></i> {{entry.mode}}</td>
+<td>{{entry.filename}}</td>
+<td><a href="#" data-ref-href="entry">{{entry.sha1}}</a></td>
+</tr>
+</tbody>
+
+</table>
+</td></tr>
+
+</tbody>
+
 </table>
 
 
