--- a/htdocs/templates/index.html
+++ b/htdocs/templates/index.html
@@ -17,19 +17,28 @@
 <td>{{object.entry_count}}</td>
 </tr>
 
-</table>
-</article>
-
-<article>
+<tr>
+<th>entries</th>
+<td>
 
 <table class="table table-striped">
+<thead>
+<tr>
+<th>path</th>
+<th>sha1</th>
+</tr>
+</thead>
+<tbody>
 <tr data-ng-repeat="entry in object.entries">
-<td><i class="icon-file"></i> {{entry.path}}</td>
+<td><i class="icon-file"></i> <a href="#/.git/index?sha1={{entry.sha1}}">{{entry.path}}</a></td>
 <td><a href="#" data-ref-href="entry">{{entry.sha1}}</a></td>
 </tr>
+</tbody>
+
+</td>
+</tr>
+
 </table>
 
 </article>
-
-{{object}}
 
