parse index entry property values

--- a/htdocs/templates/index_entry.html
+++ b/htdocs/templates/index_entry.html
@@ -27,7 +27,25 @@
 <tbody>
 <tr data-ng-repeat="key in keys">
 <th>{{key}}</th>
-<td>{{entry[key]}}</td>
+<td data-ng-switch="key">
+
+<span data-ng-switch-when="sha1">
+<a href="#" data-ref-href="entry">{{entry.sha1}}</a>
+</span>
+
+<span data-ng-switch-when="ctime">
+{{entry.ctime}} <small style="color:#aaa">{{entry.ctime | unixtime:'yyyy-MM-dd HH:mm:ss' }}</small>
+</span>
+
+<span data-ng-switch-when="mtime">
+{{entry.mtime}} <small style="color:#aaa">{{entry.mtime | unixtime:'yyyy-MM-dd HH:mm:ss' }}</small>
+</span>
+
+<span data-ng-switch-default>
+{{entry[key]}}
+</span>
+
+</td>
 </tr>
 </tbody>
 </table>
