--- a/htdocs/templates/directory.html
+++ b/htdocs/templates/directory.html
@@ -1,9 +1,25 @@
 <article>
 <h1><i data-entry-icon="'directory'"></i> {{path}} <small>Directory</small></h1>
-<ul style="list-style-type: none">
-<li data-ng-repeat="entry in object.entries">
-<i data-entry-icon="entry.type"></i> 
-<a href="/#/{{$parent.path}}/{{entry.basename}}">{{entry.basename}}</a>
-</li>
-</ul>
+
+<table class="table table-striped table-condensed">
+<thead>
+<th>file</th>
+<th>size</th>
+<th>mtime</th>
+</thead>
+<tbody>
+<tr data-ng-repeat="entry in object.entries">
+<td><i data-entry-icon="entry.type"></i> <a href="/#/{{$parent.path}}/{{entry.basename}}">{{entry.basename}}</a>
+</td>
+<td>
+{{entry.size}}
+</td>
+<td>
+{{entry.mtime | unixtime:'yyyy-MM-dd HH:mm:ss'}}
+</td>
+
+</tr>
+</tbody>
+</table>
+
 </article>
