--- a/htdocs/templates/index.html
+++ b/htdocs/templates/index.html
@@ -21,7 +21,7 @@
 <th>entries</th>
 <td>
 
-<table class="table table-striped">
+<table class="table table-striped table-condensed">
 <thead>
 <tr>
 <th>path</th>
