--- a/htdocs/templates/object.html
+++ b/htdocs/templates/object.html
@@ -26,7 +26,7 @@
 <tr data-ng-switch-when="tag"><th>message</th><td>{{object.message}}</td></tr>
 <tr data-ng-switch-when="tree"><th>entries</th><td>
 
-<table class="table table-striped">
+<table class="table table-striped table-condensed">
 <thead>
 <tr>
 <th>mode</th>
