add packed-refs view

--- a/htdocs/templates/objects.html
+++ b/htdocs/templates/objects.html
@@ -1,5 +1,7 @@
 <h1><i class="icon-folder-open"></i> {{path}} <small>Directory</small></h1>
 
+<p><i class="icon-folder-open"></i> <a href="#/.git/objects/pack">pack</a></p>
+
 <table class="table table-bordered table-hover">
 <tbody>
 <tr data-ng-repeat="rows in objectTable">
