fix packed-refs style

--- a/htdocs/templates/packed_refs.html
+++ b/htdocs/templates/packed_refs.html
@@ -1,7 +1,7 @@
 <article>
 <h1><i data-entry-icon="'ref'"></i> {{path}} <small>Packed References</small></h1>
 
-<table class="table">
+<table class="table table-striped">
 <thead>
 <tr>
 <th>sha1</th>
