add packed object view

--- a/htdocs/templates/pack_index.html
+++ b/htdocs/templates/pack_index.html
@@ -21,7 +21,7 @@
 </td>
 <td>{{entry.sha1}}</td>
 <td>{{entry.crc32}}</td>
-<td>{{entry.offset}}</td>
+<td><a href="#/{{packUrl}}?offset={{entry.offset}}">{{entry.offset}}</a></td>
 </tr>
 </tbody>
 </table>
