--- a/htdocs/templates/packed_object.html
+++ b/htdocs/templates/packed_object.html
@@ -47,6 +47,48 @@
 </td>
 </tr>
 
+<tr><th>type</th><td>
+<i data-entry-icon="object.object.type"></i> {{object.object.type}}
+</td>
+</tr>
+<tr><th>sha1</th><td>{{object.object.sha1}}</td></tr>
+<tr><th>size</th><td>{{object.object.size}}</td></tr>
+
+<tr data-ng-repeat="prop in object.object.properties">
+<th>{{prop.key}}</th>
+<td data-ng-switch="prop.type">
+<span data-ng-switch-when="sha1"><a href="#/.git/{{prop.path}}">{{prop.value}}</a></span>
+<span data-ng-switch-when="user">{{prop.value}} <small style="color:#aaa">{{prop.date}}</small></span>
+<span data-ng-switch-default>{{prop.value}}</span>
+</td>
+</tr>
+</tbody>
+
+<tbody data-ng-switch="object.object.type">
+<tr data-ng-switch-when="commit"><th>message</th><td>{{object.object.message}}</td></tr>
+<tr data-ng-switch-when="tag"><th>message</th><td>{{object.object.message}}</td></tr>
+<tr data-ng-switch-when="tree"><th>entries</th><td>
+
+<table class="table table-striped table-condensed">
+<thead>
+<tr>
+<th>mode</th>
+<th>filename</th>
+<th>sha1</th>
+</tr>
+</thead>
+<tbody>
+<tr data-ng-repeat="entry in object.object.entries">
+<td><i data-mode-icon="entry.mode"></i> {{entry.mode}}</td>
+<td>{{entry.filename}}</td>
+<td><a href="#" data-ref-href="entry">{{entry.sha1}}</a></td>
+</tr>
+</tbody>
+
+</table>
+</td></tr>
+
+
 </tbody>
 </table>
 
