--- a/htdocs/templates/pack_index.html
+++ b/htdocs/templates/pack_index.html
@@ -1,5 +1,5 @@
 <article>
-<h1><i data-entry-icon="'index'"></i> {{path}} <small>Pack Index</small></h1>
+<h1 style="font-size:1.8em;"><i data-entry-icon="'index'"></i> {{path}} <small>Pack Index</small></h1>
 
 <table class="table table-striped" data-ng-controller="PackIndexCtrl">
 <thead>
