--- a/htdocs/templates/object.html
+++ b/htdocs/templates/object.html
@@ -22,7 +22,7 @@
 </tbody>
 
 <tbody data-ng-switch="object.type">
-<tr data-ng-switch-when="blob"><th>contents</th><td><pre>{{object.contents}}</pre></td></tr>
+<tr data-ng-switch-when="blob"><th>content</th><td><pre>{{object.content}}</pre></td></tr>
 <tr data-ng-switch-when="commit"><th>message</th><td>{{object.message}}</td></tr>
 <tr data-ng-switch-when="tag"><th>message</th><td>{{object.message}}</td></tr>
 <tr data-ng-switch-when="tree"><th>entries</th><td>
