--- a/htdocs/templates/packed_object.html
+++ b/htdocs/templates/packed_object.html
@@ -49,7 +49,7 @@
 </tbody>
 
 <tbody data-ng-switch="object.object.type">
-<tr data-ng-switch-when="blob"><th>contents</th><td><pre>{{object.object.contents}}</pre></td></tr>
+<tr data-ng-switch-when="blob"><th>content</th><td><pre>{{object.object.content}}</pre></td></tr>
 <tr data-ng-switch-when="commit"><th>message</th><td>{{object.object.message}}</td></tr>
 <tr data-ng-switch-when="tag"><th>message</th><td>{{object.object.message}}</td></tr>
 <tr data-ng-switch-when="tree"><th>entries</th><td>
