--- a/htdocs/templates/file.html
+++ b/htdocs/templates/file.html
@@ -1,1 +1,6 @@
-file
+<article>
+<h1><i data-entry-icon="'file'"></i> {{path}} <small>File</small></h1>
+
+<pre>{{object.content}}</pre>
+
+</article>
