link refname to refs or packed-refs

--- a/htdocs/templates/info_refs.html
+++ b/htdocs/templates/info_refs.html
@@ -18,7 +18,7 @@
 <i data-entry-icon="'commit'"></i> <a data-ref-href="entry.tag_sha1">{{entry.tag_sha1}}</a>
 </span>
 </td>
-<td><a href="#/.git/info/refs?ref={{entry.ref}}">{{entry.ref}}</a></td>
+<td><a href="#/.git/{{entry.ref}}">{{entry.ref}}</a></td>
 </tr>
 </tbody>
 </table>
