fix links and labels

--- a/htdocs/templates/pack_index.html
+++ b/htdocs/templates/pack_index.html
@@ -9,8 +9,8 @@
 <th>sha1</th>
 <th>crc32</th>
 <th><a href="" data-ng-click="orderByOffset()">offset</a></th>
-<th>type *</th>
-<th>size *</th>
+<th>type</th>
+<th>size</th>
 </tr>
 </thead>
 <tbody>
@@ -26,13 +26,12 @@
 <td><a href="#/{{packUrl}}?offset={{entry.offset}}">{{entry.offset}}</a></td>
 <td><i data-entry-icon="entry.type"></i> {{entry.type}}
 <span data-ng-show="entry.base_offset"><a href="#/{{packUrl}}?offset={{entry.base_offset}}">{{entry.base_offset}}</a></span>
-<span data-ng-show="entry.base_sha1"><a href="#/{{packUrl}}?sha1={{entry.base_sha1}}">{{entry.base_sha1.substr(0,6)}}</a></span>
+<span data-ng-show="entry.base_sha1"><a data-ref-href="entry.base_sha1">{{entry.base_sha1.substr(0,6)}}</a></span>
 </td>
 <td>{{entry.size}}</td>
 </tr>
 </tbody>
 </table>
 
-<a href="#/.git/packed-refs" data-ng-show="limited">Show All</a>
 </article>
 
