--- a/htdocs/templates/objects.html
+++ b/htdocs/templates/objects.html
@@ -8,7 +8,7 @@
 <td data-ng-repeat="cel in rows">
   <span data-ng-switch="cel.type">
     <span data-ng-switch-when="empty"><span style="color:#eee">{{cel.basename}}</span></span>
-    <span data-ng-switch-default><a href="/#/.git/objects/{{cel.basename}}">{{cel.basename}}</a></span>
+    <span data-ng-switch-default><a href="#/.git/objects/{{cel.basename}}">{{cel.basename}}</a></span>
   </span>
 </td>
 </tr>
