--- a/htdocs/templates/pack_file.html
+++ b/htdocs/templates/pack_file.html
@@ -9,7 +9,7 @@
 <th>number of objects</th><td>{{object.object_number}}</a></td>
 </tr>
 <tr>
-<th>object entries</th><td><a href="#/{{indexUrl}}">see index</a></a></td>
+<th>object entries</th><td><a href="#{{basedir}}/{{indexUrl}}">see index</a></a></td>
 </tr>
 </table>
 </article>
