--- a/htdocs/templates/packed_refs.html
+++ b/htdocs/templates/packed_refs.html
@@ -26,11 +26,11 @@
           <i data-entry-icon="'commit'"></i> <a data-ref-href="entry.tag_sha1">{{entry.tag_sha1}}</a>
         </span>
       </td>
-      <td><a href="#/.git/packed-refs?ref={{entry.ref}}">{{entry.ref}}</a></td>
+      <td><a href="#{{basedir}}/.git/packed-refs?ref={{entry.ref}}">{{entry.ref}}</a></td>
     </tr>
   </tbody>
 </table>
-<a href="#/.git/packed-refs" data-ng-show="limited">Show All</a>
+<a href="#{{basedir}}/.git/packed-refs" data-ng-show="limited">Show All</a>
 
       </div>
       <div class="tab-pane" id="plain">
