--- a/htdocs/templates/info_refs.html
+++ b/htdocs/templates/info_refs.html
@@ -18,10 +18,10 @@
 <i data-entry-icon="'commit'"></i> <a data-ref-href="entry.tag_sha1">{{entry.tag_sha1}}</a>
 </span>
 </td>
-<td><a href="#/.git/{{entry.ref}}">{{entry.ref}}</a></td>
+<td><a href="#{{basedir}}/.git/{{entry.ref}}">{{entry.ref}}</a></td>
 </tr>
 </tbody>
 </table>
 
-<a href="#/.git/packed-refs" data-ng-show="limited">Show All</a>
+<a href="#{{basedir}}/.git/packed-refs" data-ng-show="limited">Show All</a>
 </article>
