--- a/htdocs/common/templates/objects.html
+++ b/htdocs/common/templates/objects.html
@@ -5,7 +5,7 @@
 <table class="table table-bordered table-hover">
 <tbody>
 <tr data-ng-repeat="rows in objectTable">
-<td data-ng-repeat="cel in rows">
+<td data-ng-repeat="cel in rows" data-ng-style="{background: diff['.git/objects/' + cel.basename]}">
   <span data-ng-switch="cel.type">
     <span data-ng-switch-when="empty"><span style="color:#eee">{{cel.basename}}</span></span>
     <span data-ng-switch-default><a href="#{{basedir}}/.git/objects/{{cel.basename}}">{{cel.basename}}</a></span>
